--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "json-server -p3000 --watch database.json"
+    "start": "json-server --watch database.json --port $PORT"
 
   },
   "author": "",
