--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "json-server --watch database.json --port $PORT"
-
+    "start": "npx json-server --watch database.json --port $PORT"
   },
   "author": "",
   "license": "ISC",
