--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": ">=14.0.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx json-server --watch database.json --port $PORT"
+    "start": "json-server --watch database.json --port $PORT --host 0.0.0.0"
   },
   "author": "",
   "license": "ISC",
