--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "json-server --watch database.json --port $PORT --host 0.0.0.0"
+     "start": "npx json-server --watch database.json --port $PORT --host 0.0.0.0"
   },
   "author": "",
   "license": "ISC",
