--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "database",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "engines": {
     "node": ">=14.0.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-     "start": "npx json-server --watch database.json --port $PORT --host 0.0.0.0"
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
